
2009-03-08  Edgar Friendly  <thelema314@gmail.com>

	* src/core/extlib/extMap.ml*: add Map.min_key, max_key, choose (flux)
	
	* src/core/extlib/innerIO.ml: Fix bug in autoclose (Paul Pelzl)

	* src/core/extlib/file.ml: [open_in] shouldn't autoclose (Paul Pelzl)

	* src/core/extlib/file.mli: [open_temporary_out] does autoclose -
	doc bug (Paul Pelzl)

	* Makefile.in: refactoring of Makefile for faster
	compilation (less ocamlbuild restarts) (Paul Pelzl)

	* Makefile.in: Allow [JOBS=n make] for parallel build (Paul Pelzl)

	* Configure.ac: remove configure hack (Paul Pelzl)

	
2009-03-08  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* myocamlbuild.ml: [Depsort] created

	* myocamlbuild.ml: [sort_tree], [sort_modules] implemented

	* build/distrib2source.ml: removed
	

2009-03-05  Jeremie Dimino <jeremie@dimino.org>

	* src/code/extlib/rope.mli: inverse doc of [starts_with] and [ends_with]

	* src/code/extlib/rope.ml:
	    - prevent [starts_with] and [ends_with] from failing
	    - prevent [trim] from failing when all characters are whitespaces
	    - more efficient [of_ustring]
	    - add efficient iterators, implement some TODO with them
	    - bugfix: [compare] and [icompare] where wrong
	    - prevent [lchop] and [rchop] from failing

	* src/syntax/pa_strings/pa_strings.ml:
	    - compile-time validation of utf8 strings
	    - compile-time recoding latin1 -> utf8

2009-03-04  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* doc/batteries/html/toplevel.html: Documentation on #browse added.

	* src/batteries_toolchain/batteries_help.ml: New directive #browse.

	* src/core/extlib/extPervasives.mli: Excluded printf directives from documentation generation.

	* src/core/extlib/extPrint.mli: More documentation.

	* configure.ac: Now detecting default installation directory only if $prefix is NONE

	* configure.ac: Now adapting doc installation directory to $prefix.

2009-03-04  Jeremie Dimino <jeremie@dimino.org>
